@@ -5,5 +5,4 @@ set -e
 FORMAT="$1"
 VARIANT="$2"
 
-isabelle logo -o isabelle_sledgehammer.pdf "S/H"
 "$ISABELLE_HOME/src/Doc/prepare_document" "$FORMAT"
